# weathervane

./: Cargo.toml  LICENSE  README.md
case/: back.scad  back.stl  case.scad  front.scad  front.stl  variables.scad
src/: display.rs  image.rs  lib.rs  main.rs  weather.rs
src/display/: mod.rs  waveshare.rs
