[package]
name = "weathervane"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
resvg = "0.12.0"
usvg = "0.12.0"
dither = "1.3.9"
gif = "0.11.1"
piet = "0.3.0"
piet-common = "0.3.0"
piet-cairo = "0.3.0"
time = "0.2.23"
json = "0.12.4"
reqwest = "0.10.10"
bytes = "1.0.0"
dotenv = "0.15.0"
