[package]
name = "weathervane"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
dither = "1.3.9"
dotenv = "0.15.0"
gif = "0.11.1"
json = "0.12.4"
piet = "0.3.0"
piet-cairo = "0.3.0"
piet-common = "0.3.0"
reqwest = "0.10.10"
resvg = "0.12.0"
rppal = "0.11.3"
time = "0.2.23"
usvg = "0.12.0"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-threaded"]
