[package]
name = "weathervane"
version = "0.1.0"
authors = ["Mikkel Paulson <git@email.mikkel.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dither = "1.3"
dotenv = "0.15"
gif = "0.11"
json = "0.12"
piet = "0.3"
piet-cairo = "0.3"
piet-common = "0.3"
reqwest = "0.10"
resvg = "0.12"
rppal = "0.11"
time = "0.2"
usvg = "0.12"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-threaded"]
